--- a/orderlist.html
+++ b/orderlist.html
@@ -25,7 +25,7 @@
 
     <table style="border: solid 1px black;">
         <th>Product</th>
-        <th>Order Date</th>
-    </table>
+        <th>Order Date</th> <!-- 그냥 뿌려주면 고정값들 -->
+    <!-- 아래 부터는 데이터베이스에서 끌어다와야하는 값들이라서 html로 전달하는 방법 아직 학습 x -->
 </body>
 </html>
